--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,30 @@
 .App {
   text-align: center;
+  display: flex;
+  flex-flow: column wrap;
+  flex-grow: inherit;
+  width: 1300px;
+  height: 440px;
 }
-
+ 
+.item{
+  width: 240px;
+  padding: 10px;
+  display: block;
+  border: solid 1px #000000;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+.controlList{
+  display: flex;
+  padding: 10px;
+  margin: 10px;
+  justify-content: space-around;
+}
+.m5{
+  margin-left: 15px;
 }
 
 @media (prefers-reduced-motion: no-preference) {
